# thebeast

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  _setup.py  beast.py  docker-compose.yml  requirements.txt  sample_records.py  setup.cfg
.github/: workflows
.github/workflows/: main.yml
docs/: README.md
thebeast/: __init__.py  types.py
thebeast/conf/: __init__.py  exc.py  headless_mapping_validator.json  mapping.py  mapping_validator.json  utils.py
thebeast/contrib/ftm_ext/: meta_factory.py  rigged_entity_proxy.py
thebeast/contrib/jinja_custom_filters/: __init__.py
thebeast/contrib/transformers/: __init__.py
thebeast/digest/: __init__.py  abstract.py  autodiscover.py  jinja_utils.py  multi.py  resolvers.py  single.py  utils.py
thebeast/dump/: __init__.py  abstract.py  ftmlines.py  statements.py
thebeast/ingest/: __init__.py  abstract.py  mixins.py
thebeast/tests/: test_configure.py  test_digest.py  test_dump.py  test_dump_entity.py  test_dump_statement.py  test_entity_keys.py  test_ingest.py  test_resolvers.py  test_resolvers_transformers.py  test_rigged_proxy.py  test_str_proxy.py
thebeast/tests/sample/csv/: rada4.tsv  rada5.tsv
thebeast/tests/sample/json/: bank_ceos.json  edr_sample.json  ru_mayors.jsonl
thebeast/tests/sample/mappings/: invalid.yaml  invalid_properties_1.yaml  invalid_properties_2.yaml  invalid_properties_3.yaml  invalid_properties_4.yaml  invalid_properties_5.yaml  invalid_properties_6.yaml  invalid_properties_info_1.yaml  ru_mayors.yaml  (+7 more)
thebeast/tests/test_transformers/: __init__.py
(+13 files in other folders)
