[metadata]
name = thebeast
version = attr: thebeast.__version__
author = Dmitro Chaplynskyi
author_email = chaplinsky.dmitry@gmail.com
python_requires = ">=3.8"
url = https://github.com/dchaplinsky/thebeast
description = An experimental uber machine to convert data sources of various nature into the followthemoney entities and statements
long_description = file: README.md
long_description_content_type = text/markdown
keywords = FollowTheMoney, FTM, data mapping, data engineering
license = MIT
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Typing :: Typed
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires = file: requirements.txt

[options.package_data]
thebeast = conf/mapping_validator.json
* = README.md, LICENSE

[options.packages.find]
exclude = venv*


[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
max-line-length = 120
